package backend.models;

public enum CalendarProviderType {
    ICAL,
    GOOGLE
}
